--- a/cs04.Rmd
+++ b/cs04.Rmd
@@ -20,10 +20,18 @@ library(tidyverse)
 # Case Study Goals
 Goals of this case study are (1) to predict whether the US House of Representatives remains in Republican control, and (2) to predict the outcomes of all NC Congressional elections (the 13 federal Representatives to Congress), including characterization of uncertainty in predictions.
 
-# Data (coming soon)
+We will present predictions weekly, and the final case study grading criteria will include some determined by the class. In addition, prizes will be given in a number of categories (e.g., most creative useful data source).
+
+# Data
+
+
+
+- [gay_marriage_megapoll.dta](decks/data/gay_marriage_megapoll.dta)
+
 <!---
 
-+ NC voter files at https://dl.ncsbe.gov/?prefix=data/
++ [NC voter files](https://dl.ncsbe.gov/?prefix=data/)
++ [Other NC voter data](https://www.ncsbe.gov/data-stats/other-election-related-data)
 + Cooperative Congressional Election Study https://cces.gov.harvard.edu/pages/welcome-cooperative-congressional-election-study 
 
 --->
@@ -48,21 +56,25 @@ Goals of this case study are (1) to predict whether the US House of Representati
 + [Google Street View and Voting](https://www.citylab.com/transportation/2017/12/google-street-view-data-demographics-cars-research/547436/)
 + [Pickup Trucks and Voting](http://www.thedrive.com/news/16712/trump-supporting-towns-more-likely-to-be-filled-with-pickup-trucks-study-claims)
 
-# Slides (coming soon)
+# Slides 
+
+
+- [Basics of Election Prediction](decks/cs04_1_deck.html)
+- [Poststratification and Weighting](decks/cs04_2_deck.html)
 
 <!---
-[Basics of Election Prediction](decks/cs04_1_deck.html)
 
-[MRP Tutorial](decks/cs04_2_deck.html)
+[MRP Tutorial](decks/cs04_3_deck.html)
 
 --->
 
 # Prizes
 
-Prediction prizes will be awarded in the following categories:
+Prizes will be awarded in the following categories:
 
-(1) best prediction
-(2) most creative data source
+(1) best prediction (we will define "best")
+(2) most creative data source useful for prediction (e.g., Yeti sales, number of nail salons per capita, tweets)
+(3) best visualization
 
 
 
