--- a/index.Rmd
+++ b/index.Rmd
@@ -58,9 +58,9 @@ Note: this schedule is approximate and is likely to be modified as the course pr
 | September 21  | CS3: Birth Weight Disparities \& Binomial regression | CS1 Final Report: Smoking and Birth Weight|
 | September 26  | CS3: Multilevel Models | |
 | September 28  | Group Presentations of CS2 | CS2 Final Report: Our World in Data  |
-| October 3     | CS3: Generalized Linear Multilevel Models | CS3 Interim Report: Infant Mortality Visualization| 
+| October 3     | CS3: Generalized Linear Multilevel Models | CS3 Interim Report 1: Infant Mortality Visualization| 
 | October 5     | CS4: Election Forecasting | Midsemester Grades Due (my deliverable)  |
-| October 10    | CS4: Election Forecasting with "Mr. P" | CS3 Interim Report: County-Specific Mortality by Group|
+| October 10    | CS4: Election Forecasting with "Mr. P" | CS3 Interim Report 2: 2015 County-Specific Mortality by Race |
 | October 12    | Lab: Multilevel Models for CS3 and CS4 | CS4 Election Predictions |
 | October 17    | CS4: Who Votes in NC? | CS3 Final Report: Infant Mortality Trends |
 | October 19    | CS4: Election Modeling Workshop | CS4 Election Predictions Update|
