--- a/cs04.Rmd
+++ b/cs04.Rmd
@@ -27,14 +27,10 @@ We will present predictions weekly, and the final case study grading criteria wi
 
 
 - [gay_marriage_megapoll.dta](decks/data/gay_marriage_megapoll.dta)
+- [NC voter files](https://dl.ncsbe.gov/?prefix=data/)
+- [Other NC voter data](https://www.ncsbe.gov/data-stats/other-election-related-data)
+- [Cooperative Congressional Election Study](https://cces.gov.harvard.edu/pages/welcome-cooperative-congressional-election-study) - [Opportunity Insights Data Library](https://opportunityinsights.org/data/?geographic_level=0&topic=0&paper_id=0#resource-listing)
 
-<!---
-
-+ [NC voter files](https://dl.ncsbe.gov/?prefix=data/)
-+ [Other NC voter data](https://www.ncsbe.gov/data-stats/other-election-related-data)
-+ Cooperative Congressional Election Study https://cces.gov.harvard.edu/pages/welcome-cooperative-congressional-election-study 
-
---->
 
 # Reports
 
@@ -53,6 +49,7 @@ We will present predictions weekly, and the final case study grading criteria wi
 + [Potentially helpful blog 1]( https://www.r-statistics.com/2016/08/presidential-election-predictions-2016/)
 + [Potentially helpful blog 2]( https://github.com/hardin47/prediction2016/blob/master/predblog.pdf)
 + [Worst 2016 Political Predictions](https://www.politico.com/magazine/story/2016/12/the-worst-political-predictions-of-2016-214555)
++ [Polling trends](https://www-m.cnn.com/2018/10/02/politics/trump-brett-kavanaugh-turning-point-election-educated-white-women-voters/index.html?r=https%3A%2F%2Fwww.cnn.com%2F)
 + [Google Street View and Voting](https://www.citylab.com/transportation/2017/12/google-street-view-data-demographics-cars-research/547436/)
 + [Pickup Trucks and Voting](http://www.thedrive.com/news/16712/trump-supporting-towns-more-likely-to-be-filled-with-pickup-trucks-study-claims)
 
