--- a/decks/cs04_3_deck.Rmd
+++ b/decks/cs04_3_deck.Rmd
@@ -482,6 +482,14 @@ predict_val=predict(bayes.mod, newdata=Census, allow_new_levels=TRUE,
 
 ```{r showpred}
 dim(Census)
+head(Census)
+```
+
+We'll focus on the first four subgroups: white Alaskan men with $<$HS education in the 4 age groups (18-29, 30-44, 45-64, 65+).
+
+## Prediction
+
+```{r showpred2}
 dim(predict_val)
 head(predict_val)
 ```
