--- a/decks/cs04_3_deck.Rmd
+++ b/decks/cs04_3_deck.Rmd
@@ -487,7 +487,7 @@ head(Census)
 
 We'll focus on the first four subgroups: white Alaskan men with $<$HS education in the 4 age groups (18-29, 30-44, 45-64, 65+).
 
-## Prediction
+## <small> The first 6 sampled support values for those men are in columns 1-4 here....
 
 ```{r showpred2}
 dim(predict_val)
