--- a/decks/cs03_4_deck.Rmd
+++ b/decks/cs03_4_deck.Rmd
@@ -149,7 +149,7 @@ polls.subset$region.full.lab=factor(polls.subset$region.full,
 
 ## Model specification
 
-$$\text{logit}(Pr(y_i=1))=\alpha_{j[i]}^{state}+\alpha_{k[i],l[i]}^{age.edu}+\beta_{female}female_i+\beta_{black}black_i,$$ $$\alpha_j^{state}\sim N(\alpha_{m[j]}^{region}+\beta_{v.prev}v.prev_j,\sigma^2_{state})$$ and $$\alpha_{k,l}^{age.edu} \sim N(0,\sigma^2_{age.edu})$$ for $i=1,\ldots,n$ $j=1,\ldots,51$
+$$\text{logit}(Pr(y_i=1))=\beta_0+\alpha_{j[i]}^{state}+\alpha_{k[i],l[i]}^{age.edu}+\beta_{f}female_i+\beta_{b}black_i,$$ $$\alpha_j^{state}\sim N(\alpha_{m[j]}^{region}+\beta_{v.prev}v.prev_j,\sigma^2_{state}),$$ $$\alpha_m^{region} \sim N(0,\sigma^2_{region}),$$ $$\alpha_{k,l}^{age.edu} \sim N(0,\sigma^2_{age.edu})$$  
 
 The reason the age by education term is treated as *random* and not *fixed* is that there are quite a few levels (4 age groups and 4 education groups), similar to the case with the state variable.
 
