--- a/cs04.Rmd
+++ b/cs04.Rmd
@@ -50,6 +50,7 @@ We will present predictions weekly, and the final case study grading criteria wi
 + [Potentially helpful blog 2]( https://github.com/hardin47/prediction2016/blob/master/predblog.pdf)
 + [Worst 2016 Political Predictions](https://www.politico.com/magazine/story/2016/12/the-worst-political-predictions-of-2016-214555)
 + [Polling trends](https://www-m.cnn.com/2018/10/02/politics/trump-brett-kavanaugh-turning-point-election-educated-white-women-voters/index.html?r=https%3A%2F%2Fwww.cnn.com%2F)
++ [Cool article on sensitivity of polls](https://www.nytimes.com/2016/10/13/upshot/how-one-19-year-old-illinois-man-is-distorting-national-polling-averages.html)
 + [Google Street View and Voting](https://www.citylab.com/transportation/2017/12/google-street-view-data-demographics-cars-research/547436/)
 + [Pickup Trucks and Voting](http://www.thedrive.com/news/16712/trump-supporting-towns-more-likely-to-be-filled-with-pickup-trucks-study-claims)
 
