--- a/cs03.Rmd
+++ b/cs03.Rmd
@@ -34,7 +34,10 @@ Based on data from the North Carolina Center for Health Statistics (NCHS), obtai
 
 Data Analysis Using Regression and Multilevel/Hierarchical Models by Gelman & Hill (Chapters 12-15 in particular)
 
-[2015 NC Infant Mortality Rates, from NC State Center for Health Statistics](NCinfantmortalityrates.pdf)
+- [2015 NC Infant Mortality Rates, from NC State Center for Health Statistics](NCinfantmortalityrates.pdf)
+- [Model Fit in BRMS](https://cran.r-project.org/web/packages/brms/vignettes/brms_nonlinear.html)
+- [All About Extracting Samples from BRMS](https://mjskay.github.io/tidybayes/articles/tidy-brms.html)
+
 
 
 # Slides
