--- a/cs04.Rmd
+++ b/cs04.Rmd
@@ -34,6 +34,7 @@ We will present predictions weekly, and the final case study grading criteria wi
 
 # Reports
 
+- Weekly predictions of the NC Congressional races and whether the House of Representatives will flip to Democratic control starting October 12
 - Interim report 1: who votes in NC? Using the NC voter files, identify who votes in NC so that these data can be used with election surveys in order to predict outcomes of NC congressional elections. Present results in short in-class presentation and in accompanying report not to exceed 5 pages.  Results should be fully reproducible. 
 - Interim report 2: in 5 pages (maximum), outline your models and general strategy for predicting the outcome of the 2018 elections.
 - Final report: provide point and interval estimates of the % of votes won by each NC Congressional candidate, predicting the winner of each race. Provide point and interval estimates of the probability that the US House of Representatives remains under Republican control after the 2018 election.
@@ -42,6 +43,7 @@ We will present predictions weekly, and the final case study grading criteria wi
 # Resources
 
 + [Who is running for office, and which districts are viewed as competitive?](https://www.270towin.com/2018-house-election/)
++ [Nate Silver says this is going to be easy!](https://www.newsobserver.com/news/politics-government/article216882230.html)
 + [ASA 2016 Election Contest](http://thisisstatistics.org/demystifying-the-election-prediction-2016-contest/)
 + [Why do we care about likely voters?]( https://fivethirtyeight.com/features/registered-voter-polls-will-usually-overrate-democrats/)
 + [FiveThirtyEight's 2016 forecast details]( https://fivethirtyeight.com/features/a-users-guide-to-fivethirtyeights-2016-general-election-forecast/) 
@@ -59,20 +61,18 @@ We will present predictions weekly, and the final case study grading criteria wi
 
 - [Basics of Election Prediction](decks/cs04_1_deck.html)
 - [Poststratification and Weighting](decks/cs04_2_deck.html)
+- [MRP Tutorial](decks/cs04_3_deck.html)
 
-<!---
 
-[MRP Tutorial](decks/cs04_3_deck.html)
-
---->
 
 # Prizes
 
-Prizes will be awarded in the following categories:
+Prizes may be awarded in the following categories:
 
-(1) best prediction (we will define "best")
+(1) best prediction (who wins each NC house seat + House control + tiebreak of exact number of seats won by Democrats, Republicans, and others in US House of Representatives)
 (2) most creative data source useful for prediction (e.g., Yeti sales, number of nail salons per capita, tweets)
-(3) best visualization
+(3) most easily accessibile new data source useful for prediction
+(4) best interactive visualization
 
 
 
