--- a/cs04.Rmd
+++ b/cs04.Rmd
@@ -30,7 +30,7 @@ We will present predictions weekly, and the final case study grading criteria wi
 - [NC voter files](https://dl.ncsbe.gov/?prefix=data/)
 - [Other NC voter data](https://www.ncsbe.gov/data-stats/other-election-related-data)
 - [Cooperative Congressional Election Study](https://cces.gov.harvard.edu/pages/welcome-cooperative-congressional-election-study) - [Opportunity Insights Data Library](https://opportunityinsights.org/data/?geographic_level=0&topic=0&paper_id=0#resource-listing)
-- See also data on Sakai under Resources in the CS4 folder
+- See data on Sakai under Resources in the CS4 folder for 2010 Census summary data and 2016 voting data in NC
 
 
 # Reports
@@ -43,6 +43,7 @@ We will present predictions weekly, and the final case study grading criteria wi
 
 # Resources
 
++ [Andy Gelman Interview on Election Forecasting](https://www.datacamp.com/community/blog/election-forecasting-polling)
 + [Who is running for office, and which districts are viewed as competitive?](https://www.270towin.com/2018-house-election/)
 + [Nate Silver says this is going to be easy!](https://www.newsobserver.com/news/politics-government/article216882230.html)
 + [ASA 2016 Election Contest](http://thisisstatistics.org/demystifying-the-election-prediction-2016-contest/)
